# automation-operation-center

./: .gitignore  AUTOMATION_SERVER_INTEGRATION_DOCS.md  CLI_INTEGRATION_DOCS.md  LICENSE.md  README.md  build_and_push.sh  mise.toml  pyproject.toml  shell.nix
aoc_cli/: aoc.py  (+6 more)
django/: .dockerignore  .gitlab-ci.yml  Dockerfile  Pipfile  README.md  local.yml  manage.py  mise.toml  production.yml  pyproject.toml
django/.envs/.example/: .django.example.env
django/bitswan_backend/: apps.py
django/bitswan_backend/automations_servers/terraform/: terraform.py
django/bitswan_backend/brokers/: apps.py
django/bitswan_backend/brokers/api/: serializers.py  views.py
django/bitswan_backend/brokers/migrations/: 0012_auto_20250811_1120.py  0013_delete_groupnavigation.py
django/bitswan_backend/core/: admin.py  authentication.py  authentication_backends.py  mqtt.py  viewmixins.py
django/bitswan_backend/core/management/commands/: setup_keycloak_social_app.py
django/bitswan_backend/core/managers/: organization.py
django/bitswan_backend/core/migrations/: 0001_initial.py  0002_workspacegroupmembership_and_more.py  0003_alter_automationservergroupmembership_keycloak_group_id_and_more.py  0004_add_otp_token_fields.py  0005_increase_otp_length.py  0006_workspace_keycloak_internal_client_id.py  0007_backfill_workspace_group_id.py
django/bitswan_backend/core/models/: __init__.py  automation_server.py  workspaces.py
django/bitswan_backend/core/permissions/: __init__.py  admin.py  emqx.py  workspaces.py
django/bitswan_backend/core/serializers/: automation_server.py  groups.py  mqtt_profiles.py  organization.py  workspaces.py
django/bitswan_backend/core/services/: keycloak.py
django/bitswan_backend/core/services/keycloak/: __init__.py
django/bitswan_backend/core/urls/: automation_server.py  automation_server_api.py  emqx.py  frontend_api.py  workspaces.py
django/bitswan_backend/core/utils/: mqtt.py
django/bitswan_backend/core/views/: automation_server.py  deployment.py  errors.py  general.py  groups.py  mqtt_profiles.py  organization.py  swagger.py  workspaces.py  workspaces_merged.py  workspaces_updated.py
django/bitswan_backend/dashboard_hub/migrations/: 0003_delete_dashboardentry.py
django/bitswan_backend/deployments/: urls.py
django/bitswan_backend/deployments/api/: views.py
django/bitswan_backend/gitops/api/: views.py
django/bitswan_backend/gitops/migrations/: 0005_delete_gitops.py
django/bitswan_backend/groups/: apps.py
django/bitswan_backend/groups/api/: serializers.py  service.py  views.py
django/bitswan_backend/groups/migrations/: 0002_brokers_name.py  0003_alter_brokers_url.py  0004_alter_brokers_url.py  0005_alter_brokers_url.py  0006_alter_brokers_url.py  0007_alter_brokers_url.py  0008_brokers_active.py  0009_usergroup.py  0010_usergroup_keycloak_org_id.py  0011_groupnavigation_remove_usergroup_broker_and_more.py  0012_auto_20250811_1120.py  0013_delete_groupnavigation.py
django/bitswan_backend/static/: AOC_ARCHITECTURE_GUIDE.md  AUTOMATION_SERVER_INTEGRATION_DOCS.md
django/bitswan_backend/templates/: architecture_docs.html  base.html  cli_docs.html
django/bitswan_backend/templates/admin/: login.html
django/bitswan_backend/users/: adapters.py  urls.py  views.py
django/bitswan_backend/users/tests/: test_drf_urls.py
django/bitswan_backend/workspaces/: admin.py  apps.py  models.py  permissions.py  urls.py
django/bitswan_backend/workspaces/api/: serializers.py  services.py  views.py
django/bitswan_backend/workspaces/migrations/: 0001_initial.py  0002_workspace_created_at_workspace_updated_at.py  0003_automationserver.py  0004_alter_automationserver_automation_server_id_and_more.py  0005_rename_automation_server_id_workspace_automation_server.py  0006_alter_workspace_automation_server.py  0007_workspace_editor_url.py  0008_alter_workspace_id.py  0009_auto_20250811_1119.py  0010_remove_workspace_automation_server_and_more.py
django/compose/local/django/: Dockerfile
django/compose/production/django/: Dockerfile
django/compose/production/traefik/: traefik.yml
django/config/: api_router.py  urls.py
django/config/settings/: base.py  local.py  production.py
django/docker/: dev  entrypoint  start
django/docs/: conf.py
django/future/automations_servers/terraform/: terraform.py
django/requirements/: base.txt  local.txt  production.txt
(+496 files in other folders)
