[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aoc-cli"
version = "0.1.0"
description = "Command line tool for AOC environment setup"
requires-python = ">=3.10"
authors = [{ name = "LibertyAces Ltd.", email = "support@bitswan.space" }]
dependencies = [
  "PyYAML==6.0.2",
  "python-keycloak==5.1.1",
  "requests==2.32.3",
  "influxdb-client==1.48.0",
]

[project.scripts]
aoc = "aoc_cli.main:main"


[tool.hatch.build.targets.wheel]
packages = ["aoc_cli"]
