[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bitswan_backend", "config"]

[project]
name = "bitswan-backend"
version = "0.1.0"
description = "Bitswan Backend Django Application"
requires-python = ">=3.11"
authors = [
    {name = "Bitswan Team"},
]
keywords = ["django", "backend", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core dependencies
    "python-slugify==8.0.4",
    "Pillow==10.2.0",
    "argon2-cffi==23.1.0",
    "redis==5.0.1",
    
    # Django core
    "django>=4.2.16,<5.0",
    "django-environ==0.11.2",
    "django-model-utils==4.4.0",
    "django-allauth==65.11.2",
    "django-crispy-forms==2.1",
    "crispy-bootstrap5==2023.10",
    "django-redis==5.4.0",
    
    # Django REST Framework
    "djangorestframework==3.14.0",
    "django-cors-headers==4.3.1",
    "drf-spectacular==0.27.1",
    "djoser==2.2.0",
    "djangorestframework-simplejwt==5.2.2",
    "djangorestframework-api-key==3.0.0",
    
    # Utilities
    "toml==0.10.2",
    "pyyaml==6.0.1",
    "docker==7.0.0",
    "python-keycloak==5.8.1",
    "debugpy==1.8.1",
    "setuptools==74.1.2",
    "paho-mqtt==1.6.1",
    "markdown==3.5.1",
    
    # ASGI server
    "uvicorn[standard]==0.27.1",
    
    # Database
    "psycopg2-binary==2.9.9",

    "gunicorn==21.2.0",
    "collectfast==2.2.0",
    "sentry-sdk==1.40.5",
    "django-anymail==10.2",

        # Development tools
    "Werkzeug[watchdog]==3.0.1",
    "ipdb==0.13.13",
    "watchfiles==0.21.0",
    
    # Testing
    "mypy==1.7.1",
    "django-stubs[compatible-mypy]==4.2.7",
    "pytest==8.0.1",
    "pytest-sugar==1.0.0",
    "djangorestframework-stubs[compatible-mypy]==3.14.5",
    "factory-boy==3.3.0",
    "django-coverage-plugin==3.1.0",
    "pytest-django==4.8.0",
       
    # Django development
    "django-debug-toolbar==4.3.0",
    "django-extensions==3.2.3",
]

[project.urls]
Homepage = "https://bitswan.ai"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "*/migrations/*.py",
    "staticfiles/*"
]

